# random-stuff

./: feed.xml
lean2manim/: .gitignore  README.md  pyproject.toml
lean2manim/examples/: nat_add.json  nat_add.lean  nat_induction.json
lean2manim/lean/: ProofExtractor.lean
lean2manim/lean2manim/: __init__.py  cli.py  colors.py  emitter.py  layout.py  parser.py  proof_tree.py  scene_graph.py  visual_dispatch.py
lean2manim/tests/: test_emitter.py  test_layout.py  test_parser.py  test_visual_dispatch.py
